[package]
name = "objset"
version = "0.1.0"
authors = ["Waelwindows <waelwindows@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "objset"
crate-type = ["lib", "cdylib"]

[dependencies]
mint = "0.5.5"
nom = "5.1.2"
nom_ext = { git="https://github.com/Waelwindows/nom_ext" }
num-derive = "0.3.0"
num-traits = "0.2.12"
modular-bitfield = "0.6.0"
pyo3 = { version = "0.15.1", optional = true, features = ["extension-module", "abi3-py36"] }

[target.x86_64-apple-darwin]
rustflags = [
  "-C", "link-arg=-undefined",
  "-C", "link-arg=dynamic_lookup",
]
