[package]
name = "objset"
version = "0.1.0"
authors = ["Waelwindows <waelwindows@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "objset"
crate-type = ["lib", "cdylib"]

[dependencies]
mint = "0.5.5"
nom = "7.1.0"
modular-bitfield = "0.11.2"
pyo3 = { version = "0.16.4", optional = true, features = ["extension-module", "abi3-py36"] }
