[project]
name = "objset"
dependencies = ["cffi"]
requires-python = ">=3.6"

[project.urls]
"Source Code" = "https://github.com/Waelwindows/objset"
Issues = "https://github.com/Waelwindows/objset/issues"

[build-system]
requires = ["maturin>=0.10,<0.11"]
build-backend = "maturin"

[tool.maturin]
cargo-extra-args = "--all-features"
